# Raytracer-in-c

./: .gitignore  CMakeLists.txt  README.md
Raytracer/: CMakeLists.txt
Raytracer/includes/: common.h  object.h  render.h  settings.h  stb_image_write.h  vector.h
Raytracer/src/: camera.c  color.c  common.c  main.c  object.c  render.c  transformations.c  vector.c
includes/: camera.h  color.h  config.h  object.h  transformations.h
src/: color.c  main.c  object.c  render.c  vector.c
